[project]
name = "roundabout"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "adamw-bf16",
    "awkward>=2.7.2",
    "einops>=0.8.0",
    "fla",
    "safetensors>=0.5.2",
    "setuptools>=75.8.0",
    "soundfile>=0.13.0",
    "wav-decoder",
]

[tool.uv.sources]
wav-decoder = { git = "https://github.com/kavorite/wav_decoder" }
adamw-bf16 = { git = "https://github.com/AmericanPresidentJimmyCarter/adamw-bf16" }
fla = { git = "https://github.com/fla-org/flash-linear-attention" }

[dependency-groups]
dev = [
    "ruff>=0.9.0",
]
